# YouSync

./: .gitignore  LICENSE  README.md  audio_downloader.py  build-macos-installer.sh  build-windows-installer.ps1  build_and_push.bat  build_macos_installer.sh  main.py  requirements.txt  utils.py  yousync.py  yousync.spec  youtube_audio_manager.py  youtube_metadata_finder.py  youtube_playlist_manager.py
YouSyncDev/: .flake8  debug_spotify_preview.py  install_ffmpeg.bat  installer.bat  package-lock.json  pytest.ini  requirements.txt  spotify_debug_page.html  yousync.iss  yousync.py  yousync.spec  yousync_build.bat
YouSyncDev/core/: CentralManager.py  central_manager.py  metadata_finder.py  spotify_audio_manager.py  spotify_playlist_manager.py  utils.py  youtube_audio_manager.py  youtube_playlist_manager.py
YouSyncDev/desktop/: PACKAGING.md  index.html  package-lock.json  package.json  vite.config.ts
YouSyncDev/desktop/src-tauri/: Cargo.toml  tauri.conf.json
YouSyncDev/desktop/src-tauri/capabilities/: default.json
YouSyncDev/desktop/src-tauri/src/: lib.rs  main.rs
YouSyncDev/gui/: app.py  homepage.py  newappleplaylist.py  newspotifyplaylist.py  newyoutubeplaylist.py  style.py  tooltip.py  utils.py
YouSyncDev/tests/: test_deezer_support.py  (+1 more)
core/: central_manager.py  metadata_finder.py  playlists.json  utils.py  youtube_audio_manager.py  youtube_playlist_manager.py
gui/: animatedsyncbutton.py  app.py  homepage.py  newyoutubeplaylist.py  notificationmanager.py  playlistpage.py  playlistspage.py  style.py  tooltip.py  utils.py
tests/: cookie_finder.py  test.py
(+91 files in other folders)
