[package]
name = "yousync"
version = "0.1.0"
description = "YouSync desktop app"
authors = ["YouSync"]
edition = "2021"

[lib]
name = "yousync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
